--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
 }
 
 td, th {
@@ -12,4 +11,30 @@ td, th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+input[type=text], select {
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type=submit] {
+  background-color: #0066ff;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  margin: 8px 10px;
+  padding: 10px 20px;
+}
+
+a {
+  background-color: red;
+  color: white;
+  border: 1px solid black;
+  border-radius: 4px;
+  margin: 8px 10px;
+  padding: 5px 20px;
 }
